--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <div class="text">
                 <h1>DESIGN</h1>
-                <P>Guided experiences</P>
+                <P style="margin-top:1em">Guided experiences</P>
                 <p>Low code interface</p>
             </div>
             <div class="plus">
@@ -92,15 +92,15 @@
             </div>
             <div class="text">
                 <h1>POWER</h1>
-                <P>Conversational AI</P>
+                <P style="margin-top:1em">Conversational AI</P>
                 <p>Customer Service RPA</p>
             </div>
             <div class="plus">
-                <i class="fas fa-equals"></i>
+                <i class="fad fa-equals"></i>
             </div>
             <div class="text">
                 <h1>DELIVER</h1>
-                <P>Omnichannel automation</P>
+                <P style="margin-top:1em">Omnichannel automation</P>
                 <p>Multi-Modal experiences</p>
             </div>
         </div>
